--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,16 @@ dependencies = [
     "django-filter~=25.1",
     "django-stubs[compatible-mypy]==5.1.3",
     "django-taggit>=6.1.0,<7",
+    "furo>=2024.8.6",
     "packaging>=25.0",
     "paramiko>=3.5.1",
     "psycopg>=3.2.6",
     "psycopg-binary>=3.2.6",
     "pyasn1>=0.6.1,<0.7",
     "pyasn1-modules>=0.4.1,<0.5",
+    "sphinx>=8.2.3",
+    "sphinx-autoapi>=3.6.0",
+    "sphinxcontrib-plantuml>=0.30",
     "trustpoint-core==0.2.5",
     "types-paramiko>=3.5.0.20250516",
     "zeroconf>=0.147,<0.148",
