--- a/.github/workflows/docker-test-compose.yml
+++ b/.github/workflows/docker-test-compose.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           echo "Checking health of the HTTPS endpoint with self-signed cert..."
 
-          URL="https://127.0.0.1/"
+          URL="https://127.0.0.1/setup-wizard"
 
           for i in {1..20}; do
             http_response=$(curl -k -s -o response.txt -w "%{http_code}" "$URL") || true
