--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,11 @@ keywords = ["django", "trustpoint", "server"]
 dependencies = [
     "crispy-bootstrap5~=2025.4",
     "cryptography>=45.0.2",
-    "django~=5.1.8",
+    "django>=5.2.4",
     "django-crispy-forms~=2.3",
     "django-dbbackup>=4.2.1",
     "django-filter~=25.1",
-    "django-stubs[compatible-mypy]==5.1.3",
+    "django-stubs[compatible-mypy]>=5.2.2",
     "django-taggit>=6.1.0,<7",
     "packaging>=25.0",
     "paramiko>=3.5.1",
@@ -38,9 +38,6 @@ dev = [
     "pytest-html >= 4.1.1",
     "pytest-md >= 0.2.0",
     "pytest-md-report >= 0.6.3",
-    "behave >= 1.2.7.dev6",
-    "behave-django >= 1.5.0",
-    "behave-html-pretty-formatter >= 1.12.7",
     "devtools >= 0.12.2, < 0.13",
     "django-extensions >= 4.1",
     "docutils-stubs >= 0.0.22, < 0.0.23",
@@ -49,8 +46,11 @@ dev = [
     "beautifulsoup4 >= 4.13.4",
     "ruff>=0.11.9",
     "requests>=2.32.3",
-    "allure-behave>=2.14.2",
-    "allure-pytest>=2.14.2",
+    "behave>=1.2.7.dev6",
+    "behave-django>=1.6.0",
+    "behave-html-pretty-formatter>=1.14.1",
+    "allure-behave>=2.14.3",
+    "allure-pytest>=2.14.3",
 ]
 # For building docs
 docs = [
