--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -25,19 +25,14 @@ jobs:
 
     - name: Generate SBOM (from environment)
       run: |
-        cyclonedx-py env -o sbom_cycondedx.json
+        cyclonedx-py env -o sbom_cyclonedx.json
 
-    - name: Copy SBOM to static folder
-      run: |
-        mkdir -p trustpoint/static/sbom
-        cp sbom_cyclonedx.json trustpoint/static/sbom/sbom_cyclonedx.json
-
-    - name: Commit SBOM to repo
+    - name: Commit SBOM to repo root
       run: |
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
-        git add trustpoint/sbom_cyclonedx.json
-        git commit -m "Update SBOM [CI]" || echo "No changes to commit"
+        git add sbom_cyclonedx.json
+        git commit -m "Update SBOM (sbom_cyclonedx.json) [CI]" || echo "No changes to commit"
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -45,5 +40,5 @@ jobs:
     - name: Upload SBOM artifact
       uses: actions/upload-artifact@v4
       with:
-        name: sbom_cyclonedx
+        name: trustpoint-sbom
         path: sbom_cyclonedx.json
