--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -27,15 +27,28 @@ jobs:
       run: |
         cyclonedx-py env -o sbom_cyclonedx.json
 
-    - name: Commit SBOM to repo root
+    - name: Create and push branch with SBOM
       run: |
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
+
+        BRANCH_NAME=update-sbom-${{ github.run_id }}
+        git checkout -b $BRANCH_NAME
         git add sbom_cyclonedx.json
         git commit -m "Update SBOM (sbom_cyclonedx.json) [CI]" || echo "No changes to commit"
-        git push
+        git push origin $BRANCH_NAME
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v5
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        branch: update-sbom-${{ github.run_id }}
+        title: "Update SBOM (sbom_cyclonedx.json) [CI]"
+        body: |
+          This PR updates the CycloneDX SBOM file automatically.
+        commit-message: "Update SBOM (sbom_cyclonedx.json) [CI]"
 
     - name: Upload SBOM artifact
       uses: actions/upload-artifact@v4
