--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -22,10 +22,10 @@ jobs:
       run: docker build -t trustpoint:latest -f docker/trustpoint/Dockerfile .
     
     - name: Generate CycloneDX SBOM
-      run: syft trustpoint:latest -o cyclonedx-json=sbom-cyclonedx.json
+      run: syft trustpoint:latest -o cyclonedx-json=sbom_cyclonedx.json
 
     - name: Generate SPDX SBOM
-      run: syft trustpoint:latest -o spdx-json=sbom-spdx.json
+      run: syft trustpoint:latest -o spdx-json=sbom_spdx.json
 
     - name: Check if CycloneDX SBOM file exists
       run: |
@@ -33,7 +33,7 @@ jobs:
 
     - name: Check if SPDX SBOM file exists
       run: |
-        ls -lh sbom-spdx.json
+        ls -lh sbom_spdx.json
 
     - name: Create and push branch with SBOM
       run: |
@@ -43,8 +43,8 @@ jobs:
         BRANCH_NAME=update-sbom-${{ github.run_id }}
         git checkout -b $BRANCH_NAME
         git add sbom_cyclonedx.json
-        git add sbom-spdx.json
-        git commit -m "Update SBOM (sbom_cyclonedx.json and sbom-spdx.json) [CI]" || echo "No changes to commit"
+        git add sbom_spdx.json
+        git commit -m "Update SBOM (sbom_cyclonedx.json and sbom_spdx.json) [CI]" || echo "No changes to commit"
         git push origin $BRANCH_NAME
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -58,4 +58,4 @@ jobs:
         title: "Update SBOM (sbom_cyclonedx.json) [CI]"
         body: |
           This PR updates the CycloneDX and SPDX SBOM file automatically.
-        commit-message: "Update SBOM (sbom_cyclonedx.json and sbom-spdx.json) [CI]"
+        commit-message: "Update SBOM (sbom_cyclonedx.json and sbom_spdx.json) [CI]"
