--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -42,8 +42,7 @@ jobs:
 
         BRANCH_NAME=update-sbom-${{ github.run_id }}
         git checkout -b $BRANCH_NAME
-        git add sbom_cyclonedx.json
-        git add sbom_spdx.json
+        git add .
         git commit -m "Update SBOM (sbom_cyclonedx.json and sbom_spdx.json) [CI]" || echo "No changes to commit"
         git push origin $BRANCH_NAME
       env:
