--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -20,6 +20,13 @@ jobs:
     
     - name: Build Trustpoint Docker image
       run: docker build -t trustpoint:latest -f docker/trustpoint/Dockerfile .
+
+    - name: Git checkout
+      run: | 
+        git config user.name "github-actions"
+        git config user.email "github-actions@github.com"
+        BRANCH_NAME=update-sbom-${{ github.run_id }}
+        git checkout -b $BRANCH_NAME
     
     - name: Generate CycloneDX SBOM
       run: syft trustpoint:latest -o cyclonedx-json=sbom_cyclonedx.json
@@ -37,11 +44,6 @@ jobs:
 
     - name: Create and push branch with SBOM
       run: |
-        git config user.name "github-actions"
-        git config user.email "github-actions@github.com"
-
-        BRANCH_NAME=update-sbom-${{ github.run_id }}
-        git checkout -b $BRANCH_NAME
         git add .
         git commit -m "Update SBOM (sbom_cyclonedx.json and sbom_spdx.json) [CI]" || echo "No changes to commit"
         git push origin $BRANCH_NAME
