--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
   workflow_dispatch:
+  pull_request:
+    types:
+      - ready_for_review
 
 jobs:
   sbom:
@@ -62,5 +65,5 @@ jobs:
         labels: |
           automated pr
           sbom
-        draft: false
+        draft: always-true
 
