--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - "443:443"
     depends_on:
       - postgres
+    volumes:
+      - ./trustpoint:/var/www/html/trustpoint/trustpoint/pkcs11_support
     environment:
       POSTGRES_DB: "trustpoint_db"
       DATABASE_USER: "admin"
