--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,22 @@ services:
       - "443:443"
     depends_on:
       - postgres
+      - mailpit
     environment:
       POSTGRES_DB: "trustpoint_db"
       DATABASE_USER: "admin"
       DATABASE_PASSWORD: "testing321"
       DATABASE_HOST: "postgres"
       DATABASE_PORT: "5432"
+
+      DEFAULT_FROM_EMAIL: "no-reply@trustpoint.de"
+      EMAIL_HOST: "mailpit"
+      EMAIL_PORT: "1025"
+      EMAIL_USE_TLS: "false"
+      EMAIL_USE_SSL: "false"
+      EMAIL_HOST_USER: Null
+      EMAIL_HOST_PASSWORD: Null
+      EMAIL_TIMEOUT: "10"
 
   postgres:
     build:
@@ -31,6 +41,13 @@ services:
       POSTGRES_USER: "admin"
       POSTGRES_PASSWORD: "testing321"
       POSTGRES_DB: "trustpoint_db"
+
+  mailpit:
+    image: axllent/mailpit:latest
+    container_name: mailpit
+    ports:
+      - "8025:8025"  # Web UI
+      - "1025:1025"  # SMTP
 
 volumes:
   postgres_data:
