--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -14,9 +14,6 @@ on:
 jobs:
   sbom:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
 
     steps:
     - name: Checkout Trustpoint repo
@@ -43,27 +40,14 @@ jobs:
       run: |
         ls -lh sbom_spdx.json
 
-    - name: Create Draft Pull Request
-      id: cpr
-      uses: peter-evans/create-pull-request@v7
+    - name: Upload CycloneDX SBOM
+      uses: actions/upload-artifact@v5
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: Update SBOM
-        add-paths: |
-          sbom_cyclonedx.json
-          sbom_spdx.json
-        committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
-        author: ${{ github.actor }} <${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com>
-        signoff: false
-        branch: update-sbom-${{ github.run_id }}
-        delete-branch: true
-        title: '[ACTION] Update SBOM'
-        body: |
-          Update SBOM
-          - Update sbom_cyclonedx.json
-          - Update sbom_spdx.json
-        labels: |
-          automated pr
-          sbom
-        draft: true
+        name: sbom-cyclonedx
+        path: sbom_cyclonedx.json
 
+    - name: Upload SPDX SBOM
+      uses: actions/upload-artifact@v5
+      with:
+        name: sbom-spdx
+        path: sbom_spdx.json
