Add support for backup password setup and restore operations.
- Introduced `BackupPasswordForm` and `BackupRestoreForm` for handling backup password and restore functionality.
- Added `SetupWizardBackupPasswordView` to support backup password configuration during the setup wizard.
- Updated dependencies to include `argon2-cffi >= 25.1.0` for secure password hashing.
- Extended HSM setup flow to redirect to the backup password setup step.
- Added validation and error handling for backup restore operations with optional password recovery.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = { file = "LICENSE" }
 keywords = ["django", "trustpoint", "server"]
 
 dependencies = [
+    "argon2-cffi>=25.1.0",
     "crispy-bootstrap5~=2025.4",
     "cryptography>=45.0.2",
     "django~=5.1.8",
