--- a/docker/trustpoint/nginx/trustpoint-nginx.conf
+++ b/docker/trustpoint/nginx/trustpoint-nginx.conf
@@ -1,10 +1,6 @@
-upstream trustpoint_django {
-    server 127.0.0.1:8000;
-}
-
-
 server {
     listen 80;
+    server_name localhost;
     return 301 https://$host$request_uri;
 }
 
@@ -12,10 +8,10 @@ server {
 server {
     listen 443 ssl http2;
     server_name localhost;
-    # SSL certificates
-    ssl_certificate /etc/trustpoint/tls/apache-tls-server-cert.pem;
-    ssl_certificate_key /etc/trustpoint/tls/apache-tls-server-key.key;
-    ssl_trusted_certificate /etc/trustpoint/tls/apache-tls-server-cert-chain.pem;
+
+    ssl_certificate     /etc/trustpoint/nginx/tls/apache-tls-server-cert.pem;
+    ssl_certificate_key /etc/trustpoint/nginx/tls/apache-tls-server-key.pem;
+    ssl_trusted_certificate /etc/trustpoint/nginx/tls/apache-tls-server-cert-chain.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256;
@@ -32,16 +28,13 @@ server {
         alias /var/www/html/trustpoint/trustpoint/collected_static/;
     }
 
-
     location / {
-        proxy_pass http://trustpoint_django;
+        proxy_pass http://127.0.0.1:8000;
         proxy_set_header Host $host;
-        proxy_set_header X-SSL-Client-Cert $ssl_client_cert;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        client_max_body_size 10M;
-
         proxy_set_header X-SSL-Client-Cert $ssl_client_cert;
         proxy_set_header X-SSL-Client-Verify $ssl_client_verify;
         proxy_set_header X-SSL-Client-S-DN $ssl_client_s_dn;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        client_max_body_size 10M;
     }
 }
