--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,15 +17,15 @@ build:
     - graphviz
     - plantuml
   jobs:
-    create_environment:
+    pre_create_environment:
       - asdf plugin add uv
       - asdf install uv latest
       - asdf global uv latest
-      - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv sync --all-extras --group docs
+    create_environment:
+      - uv venv "${READTHEDOCS_VIRTUALENV_PATH}"
     install:
-      - "true"
-    build:
-      html:
-        - cd docs
-        - mkdir -p $READTHEDOCS_OUTPUT/html/
-        - uv run -m sphinx.cmd.build -M html source $READTHEDOCS_OUTPUT/html
+      - UV_PROJECT_ENVIRONMENT="${READTHEDOCS_VIRTUALENV_PATH}" uv sync --frozen --group docs
+
+# Build documentation in the "docs/" directory with Sphinx
+sphinx:
+  configuration: docs/source/conf.py
