--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -25,7 +25,13 @@ build:
       - uv venv "${READTHEDOCS_VIRTUALENV_PATH}"
     install:
       - UV_PROJECT_ENVIRONMENT="${READTHEDOCS_VIRTUALENV_PATH}" uv sync --frozen --group docs
+    build:
+      html:
+        - source ${READTHEDOCS_VIRTUALENV_PATH}/bin/activate
+        - cd docs
+        - mkdir -p $READTHEDOCS_OUTPUT/html/
+        - uv run -m sphinx.cmd.build -M html source $READTHEDOCS_OUTPUT/html
 
 # Build documentation in the "docs/" directory with Sphinx
-sphinx:
-  configuration: docs/source/conf.py
+#sphinx:
+#  configuration: docs/source/conf.py
