--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "443:443"
     depends_on:
       - postgres
+      - softhsm
     volumes:
       - ./trustpoint/settings:/var/www/html/trustpoint/trustpoint/settings
     environment:
@@ -20,6 +21,7 @@ services:
       DATABASE_PORT: "5432"
       HSM_PIN_FILE: /run/secrets/hsm_pin
       HSM_SO_PIN_FILE: /run/secrets/hsm_so_pin
+      PKCS11_PROXY_SOCKET: "softhsm:5657"
     secrets:
       - db_user
       - db_password
@@ -43,6 +45,14 @@ services:
     secrets:
       - db_user
       - db_password
+
+  softhsm:
+    build:
+      context: .
+      dockerfile: docker/softhsm/Dockerfile
+    container_name: softhsm
+    ports:
+      - "5657:5657"
 
 secrets:
   db_user:
