Refactor PKCS#11 module path to use '/usr/local/lib/libpkcs11-proxy.so' across configurations, Dockerfiles, forms, and tests; enhance HSM setup and initialization scripts.

--- a/docker/softhsm/softhsm.conf
+++ b/docker/softhsm/softhsm.conf
@@ -6,5 +6,8 @@ directories.tokendir = /var/lib/softhsm/tokens
 # Object store backend
 objectstore.backend = file
 
+slots.mechanisms = ALL
+slots.removable = false
+
 # ERROR, WARNING, INFO, DEBUG
 log.level = INFO
