--- a/docker/trustpoint/Dockerfile
+++ b/docker/trustpoint/Dockerfile
@@ -8,13 +8,13 @@ ENV PYTHONUNBUFFERED=1 \
     UV_FROZEN=1
 
 # Make port 80 and 443 available to the world outside this container.
-# 80 will be redirected to 443 using TLS through the apache.
+# 80 will be redirected to 443 using TLS through the nginx.
 EXPOSE 80 443
 
 # Update apt repository and install required dependencies from apt
 RUN apt-get update && \
     apt-get upgrade -y && \
-        apt-get install -y --no-install-recommends \ 
+        apt-get install -y --no-install-recommends \
         sudo \
         apt-utils \
         nginx \
@@ -66,7 +66,8 @@ RUN mkdir -p /etc/trustpoint/ && \
     cp -r /var/www/html/trustpoint/docker/trustpoint/* /etc/trustpoint/ && \
     chown -R root:root /etc/trustpoint/ && \
     chmod -R 755 /etc/trustpoint/
-COPY ./docker/trustpoint/wizard/state/ /etc/trustpoint/wizard/state/
+
+
 # Add cron setup
 RUN chmod +x /etc/trustpoint/notifications/execute_notifications.sh && \
     cp /etc/trustpoint/notifications/crontab.txt /etc/cron.d/execute_notifications && \
@@ -81,31 +82,25 @@ RUN cp ./docker/trustpoint/wizard/sudoers /etc/sudoers && \
     chown root:root /etc/sudoers && \
     chmod 440 /etc/sudoers && \
     service sudo restart
-# Create log directories
-RUN mkdir -p /var/log/nginx && \
-    chown www-data:www-data /var/log/nginx
+
+
 # TODO(AlexHx8472): We may want to use proper docker secrets handling in the future
 RUN mkdir -p /etc/trustpoint/secrets && \
     uv run python -c "from pathlib import Path; from django.core.management.utils import get_random_secret_key; Path('/etc/trustpoint/secrets/django_secret_key.env').write_text(get_random_secret_key())" && \
     chown -R www-data:www-data /etc/trustpoint/secrets && \
     chmod -R 700 /etc/trustpoint/secrets
 
+
 # NGINX CONFIGURATION
 RUN rm -f /etc/nginx/sites-enabled/*
 COPY ./docker/trustpoint/nginx/trustpoint-nginx.conf /etc/nginx/sites-available/trustpoint
 
 
-# Debug: Verify the file exists
-RUN ls -la /etc/nginx/sites-available/ && \
-    echo "=== Contents of trustpoint config ===" && \
-    cat /etc/nginx/sites-available/trustpoint || echo "File not found!"
-
-
-
 RUN chmod +x /etc/trustpoint/wizard/transition/*.sh
-COPY ./docker/trustpoint/wizard/sudoers /etc/sudoers
-RUN chown root:root /etc/sudoers && chmod 440 /etc/sudoers && cat /etc/sudoers
-#  USE NGINX ENTRYPOINT
+#  Make ENTRYPOINT executable
 RUN chmod +x ./docker/trustpoint/entrypoint.sh
+
+
+COPY ./docker/trustpoint/wizard/sudoers /etc/sudoers
 
 ENTRYPOINT ["docker/trustpoint/entrypoint.sh"]
