--- a/.github/workflows/backup-restore.yml
+++ b/.github/workflows/backup-restore.yml
@@ -1,5 +1,5 @@
 # .github/workflows/backup-restore.yml
-name: Backup & Restore TrustPoint
+name: Backup & Restore Trustpoint
 
 on:
   workflow_call:
@@ -31,7 +31,7 @@ jobs:
         run: |
           uv run trustpoint/manage.py add_domains_and_devices
 
-      - name: Build and start TrustPoint container
+      - name: Build and start Trustpoint container
         run: |
           docker build -t trustpointproject/trustpoint:latest -f docker/trustpoint/Dockerfile .
           docker run -d --name trustpoint --link postgres -p80:80 -p443:443 -ePOSTGRES_DB=trustpoint_db -eDATABASE_USER=admin -eDATABASE_PASSWORD=testing321 -eDATABASE_HOST=postgres -eDATABASE_PORT=5432 trustpointproject/trustpoint:latest
@@ -45,13 +45,13 @@ jobs:
       - name: Download backup artifact
         run: docker cp trustpoint:/var/www/html/trustpoint/trustpoint/media/backups/from_outside.dump.gz .
 
-      - name: Remove TrustPoint container
+      - name: Remove Trustpoint container
         run: docker rm -f trustpoint
 
       - name: Reset database
         run: uv run trustpoint/manage.py reset_db --force --no-user 
 
-      - name: Start fresh TrustPoint container
+      - name: Start fresh Trustpoint container
         run: docker run -d --name trustpoint --link postgres -p80:80 -p443:443 -ePOSTGRES_DB=trustpoint_db -eDATABASE_USER=admin -eDATABASE_PASSWORD=testing321 -eDATABASE_HOST=postgres -eDATABASE_PORT=5432 trustpointproject/trustpoint:latest
 
       - name: Upload backup to container
@@ -60,7 +60,7 @@ jobs:
       - name: Restore database in container
         run: docker exec trustpoint sh -c "uv run trustpoint/manage.py dbrestore  -z --noinput -I trustpoint/media/backups/from_outside.dump.gz"
 
-      - name: Restore TrustPoint in container
+      - name: Restore Trustpoint in container
         run: docker exec trustpoint sh -c "uv run trustpoint/manage.py trustpointrestore"
 
       - name: Validate post-restore deployment
