--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,6 +110,6 @@ md_report = true
 md_report_output = 'md-report.md'
 
 [tool.behave.userdata]
-'behave.formatter.html-pretty.title_string' = 'TrustPoint Test Report'
+'behave.formatter.html-pretty.title_string' = 'Trustpoint Test Report'
 'behave.formatter.html-pretty.show_summary' = 'true'
 'behave.formatter.html-pretty.collapse' = 'all'
