--- a/docker/trustpoint/nginx/trustpoint-nginx.conf
+++ b/docker/trustpoint/nginx/trustpoint-nginx.conf
@@ -31,7 +31,7 @@ server {
     location / {
         proxy_pass http://127.0.0.1:8000;
         proxy_set_header Host $host;
-        proxy_set_header X-SSL-Client-Cert $ssl_client_cert;
+        proxy_set_header X-SSL-Client-Cert $ssl_client_escaped_cert;
         proxy_set_header X-SSL-Client-Verify $ssl_client_verify;
         proxy_set_header X-SSL-Client-S-DN $ssl_client_s_dn;
         proxy_set_header X-Forwarded-Proto $scheme;
