--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "django-filter-stubs>=0.1.3",
     "django-stubs[compatible-mypy]>=5.2.2",
     "django-taggit>=6.1.0,<7",
+    "djangorestframework>=3.16.1",
     "packaging>=25.0",
     "paramiko>=3.5.1",
     "psycopg>=3.2.10",
