--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
     "pydantic>=2.11.7",
     "pydeps>=3.0.1",
     "python-pkcs11>=0.8.1",
-    #"trustpoint-core==0.2.5",
+    "trustpoint-core==0.3.0",
     "types-paramiko>=3.5.0.20250516",
     "zeroconf>=0.148,<0.149",
 ]
