--- a/.github/actions/setup-uv-action/action.yml
+++ b/.github/actions/setup-uv-action/action.yml
@@ -23,4 +23,4 @@ runs:
       if: ${{ inputs.run_migrations == 'true' }} # Only run migrations if input is true.
       shell: bash
       run: |
-        echo "y" | uv run trustpoint/manage.py reset_db  
+        uv run trustpoint/manage.py reset_db --force --keep-all-migrations
