--- a/.dockerignore
+++ b/.dockerignore
@@ -14,3 +14,9 @@ docs
 **/.mypy_cache
 **/behave-report.html
 **/md-report.md
+
+# Exclude sensitive files
+**/hsm_so_pin.txt
+**/hsm_pin.txt
+**/db_user.txt
+**/db_password.txt
