--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,7 +91,7 @@ ignore = [
     # TODO(AlexHx8472): We should use this in the future:
     "TD003",
 ]
-exclude = ["**/migrations/*", "**/manage.py"]
+exclude = ["**/migrations/*", "**/manage.py", "**/tests/*", "**/management/commands/*"]
 
 [tool.ruff.lint.per-file-ignores]
 "**/tests/**/**.py" = ["S101"]
@@ -105,7 +105,6 @@ docstring-code-format = true
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
-
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = 'trustpoint.settings'
