Refactor TLS certificate handling and improve logging.

--- a/docker/trustpoint/apache/trustpoint-apache-https.conf
+++ b/docker/trustpoint/apache/trustpoint-apache-https.conf
@@ -11,7 +11,9 @@
     SSLEngine on
     SSLCertificateKeyFile /etc/trustpoint/tls/apache-tls-server-key.key
     SSLCertificateFile /etc/trustpoint/tls/apache-tls-server-cert.pem
-    SSLCertificateChainFile /etc/trustpoint/tls/apache-tls-server-cert-chain.pem
+    <IfFile /etc/trustpoint/tls/apache-tls-server-cert-chain.pem>
+        SSLCertificateChainFile /etc/trustpoint/tls/apache-tls-server-cert-chain.pem
+    </IfFile>
     #SSLCACertificateFile /etc/trustpoint/tls/client-truststore.pem  # The CA used to issue client certs
 
     SSLProtocol -all +TLSv1.2 +TLSv1.3
