Add test suites for settings and TLS views
mypy and ruff fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,6 +116,27 @@ python_files = 'test_*.py'
 md_report = true
 md_report_output = 'md-report.md'
 
+[tool.coverage.run]
+omit = [
+    "*/tests/*",
+    "*/test_*.py",
+    "*/__pycache__/*",
+    "*/site-packages/*",
+    "*/migrations/*",
+    "*/manage.py",
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "@abstractmethod",
+]
+
 [tool.behave.userdata]
 'behave.formatter.html-pretty.title_string' = 'Trustpoint Test Report'
 'behave.formatter.html-pretty.show_summary' = 'true'
