Update CodeQL and ZAP workflows to use latest action versions

--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -29,6 +29,7 @@ jobs:
           target: "http://localhost:80"
           fail_action: true                 # fail on medium/high alerts
           cmd_options: "-a"
+          artifact_name: "zap-scan-results"
 
       - name: Cleanup
         if: always()
