--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -25,11 +25,44 @@ jobs:
 
       - name: OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.12.0
+        continue-on-error: true  # Don't fail the workflow, but track the result
+        id: zap-scan
         with:
           target: "http://localhost:80"
-          fail_action: true                 # fail on medium/high alerts
+          fail_action: false  # We'll handle failures manually
           cmd_options: "-a"
-          artifact_name: "zap-scan-results"
+          allow_issue_writing: false  # Disable automatic issue creation to avoid duplicates
+
+      - name: Upload ZAP Scan Reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: zap-reports
+          path: |
+            report_json.json
+            report_md.md
+            report_html.html
+          retention-days: 30
+
+      - name: Check ZAP Scan Results
+        if: always()
+        run: |
+          if [ -f report_json.json ]; then
+            # Count WARN and FAIL alerts
+            WARN_COUNT=$(grep -o "WARN-NEW" report_md.md | wc -l || echo "0")
+            FAIL_COUNT=$(grep -o "FAIL-NEW" report_md.md | wc -l || echo "0")
+            
+            echo "ZAP Scan Results:"
+            echo "  Warnings: $WARN_COUNT"
+            echo "  Failures: $FAIL_COUNT"
+            
+            if [ "$FAIL_COUNT" -gt 0 ]; then
+              echo "::error::ZAP found $FAIL_COUNT high/medium severity issues"
+              exit 1
+            elif [ "$WARN_COUNT" -gt 0 ]; then
+              echo "::warning::ZAP found $WARN_COUNT warnings (low severity)"
+            fi
+          fi
 
       - name: Cleanup
         if: always()
