--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           target: "http://localhost:80"
           fail_action: false
-          cmd_options: "-a"
+          cmd_options: "-a -J report_http_json.json -w report_http_md.md -r report_http_html.html"
           allow_issue_writing: false
 
       - name: OWASP ZAP Baseline Scan (HTTPS)
@@ -40,8 +40,8 @@ jobs:
         with:
           target: "https://localhost:443"
           fail_action: false
-          cmd_options: "-a"
-          allow_issue_writing: false 
+          cmd_options: "-a -J report_https_json.json -w report_https_md.md -r report_https_html.html"
+          allow_issue_writing: false
 
       - name: Upload ZAP Scan Reports
         uses: actions/upload-artifact@v4
@@ -49,29 +49,52 @@ jobs:
         with:
           name: zap-reports
           path: |
-            report_json.json
-            report_md.md
-            report_html.html
+            report_http_json.json
+            report_http_md.md
+            report_http_html.html
+            report_https_json.json
+            report_https_md.md
+            report_https_html.html
           retention-days: 30
 
       - name: Check ZAP Scan Results
         if: always()
         run: |
-          if [ -f report_json.json ]; then
-            # Count WARN and FAIL alerts
-            WARN_COUNT=$(grep -o "WARN-NEW" report_md.md | wc -l || echo "0")
-            FAIL_COUNT=$(grep -o "FAIL-NEW" report_md.md | wc -l || echo "0")
-            
-            echo "ZAP Scan Results:"
-            echo "  Warnings: $WARN_COUNT"
-            echo "  Failures: $FAIL_COUNT"
-            
-            if [ "$FAIL_COUNT" -gt 0 ]; then
-              echo "::error::ZAP found $FAIL_COUNT high/medium severity issues"
-              exit 1
-            elif [ "$WARN_COUNT" -gt 0 ]; then
-              echo "::warning::ZAP found $WARN_COUNT warnings (low severity)"
-            fi
+          TOTAL_WARN=0
+          TOTAL_FAIL=0
+          
+          # Check HTTP scan results
+          if [ -f report_http_md.md ]; then
+            HTTP_WARN=$(grep -o "WARN-NEW" report_http_md.md | wc -l || echo "0")
+            HTTP_FAIL=$(grep -o "FAIL-NEW" report_http_md.md | wc -l || echo "0")
+            echo "HTTP Scan Results:"
+            echo "  Warnings: $HTTP_WARN"
+            echo "  Failures: $HTTP_FAIL"
+            TOTAL_WARN=$((TOTAL_WARN + HTTP_WARN))
+            TOTAL_FAIL=$((TOTAL_FAIL + HTTP_FAIL))
+          fi
+          
+          # Check HTTPS scan results
+          if [ -f report_https_md.md ]; then
+            HTTPS_WARN=$(grep -o "WARN-NEW" report_https_md.md | wc -l || echo "0")
+            HTTPS_FAIL=$(grep -o "FAIL-NEW" report_https_md.md | wc -l || echo "0")
+            echo "HTTPS Scan Results:"
+            echo "  Warnings: $HTTPS_WARN"
+            echo "  Failures: $HTTPS_FAIL"
+            TOTAL_WARN=$((TOTAL_WARN + HTTPS_WARN))
+            TOTAL_FAIL=$((TOTAL_FAIL + HTTPS_FAIL))
+          fi
+          
+          echo ""
+          echo "Total Results:"
+          echo "  Warnings: $TOTAL_WARN"
+          echo "  Failures: $TOTAL_FAIL"
+          
+          if [ "$TOTAL_FAIL" -gt 0 ]; then
+            echo "::error::ZAP found $TOTAL_FAIL high/medium severity issues across HTTP and HTTPS"
+            exit 1
+          elif [ "$TOTAL_WARN" -gt 0 ]; then
+            echo "::warning::ZAP found $TOTAL_WARN warnings (low severity) across HTTP and HTTPS"
           fi
 
       - name: Cleanup
