--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -12,6 +12,9 @@ on:
 jobs:
   zap-baseline:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      actions: read
 
     steps:
       - name: Checkout Code
