Add junit.xml output to Pytest coverage run

--- a/.github/workflows/codecov-upload.yml
+++ b/.github/workflows/codecov-upload.yml
@@ -20,7 +20,7 @@ jobs:
           run_migrations: true  # Enable database migrations.
 
       - name: Run Pytest with Coverage
-        run: uv run pytest --cov=trustpoint --cov-report=xml -o junit_family=legacy trustpoint/
+        run: uv run pytest --cov=trustpoint --cov-report=xml --junitxml=junit.xml -o junit_family=legacy trustpoint/
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
@@ -33,4 +33,5 @@ jobs:
         uses: codecov/test-results-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./junit.xml
 
