--- a/mypy.ini
+++ b/mypy.ini
@@ -2,7 +2,7 @@
 strict = True
 plugins = mypy_django_plugin.main
 mypy_path = trustpoint
-exclude = ^(trustpoint/manage\.py$|tests/|.*/tests/|migrations/|.*/migrations/|trustpoint/features/steps/.*$|trustpoint/tests/.*$|trustpoint/.*management/commands/.*$|trustpoint/management/security/.*$|trustpoint/features/environment\.py$)
+exclude = ^(trustpoint/manage\.py$|tests/|.*/tests/|migrations/|.*/migrations/|trustpoint/features/steps/.*$|trustpoint/tests/.*$|trustpoint/.*management/commands/.*$|trustpoint/management/security/.*$|trustpoint/features/environment\.py$|conftest\.py$|.*/conftest\.py$)
 
 # Tell the django-stubs plugin where settings.py lives:
 [mypy.plugins.django-stubs]
