--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,7 +94,7 @@ ignore = [
     # TODO(AlexHx8472): We should use this in the future:
     "TD003",
 ]
-exclude = ["**/migrations/*", "**/manage.py", "**/tests/*", "**/management/commands/*"]
+exclude = ["**/migrations/*", "**/manage.py", "**/tests/*", "**/management/commands/*", "**/features/*", "**/conftest.py"]
 
 [tool.ruff.lint.per-file-ignores]
 "**/tests/**/**.py" = ["S101"]
